# sem4-apc-labs

l1/: CMakeLists.txt
l1.1/.nvim/: tasks.json
l1.1/src/: main.c
l1.2/: MAIN.ASM
l1.2/.nvim/: tasks.json
l1.3/: MAIN.ASM
l1.3/.nvim/: tasks.json
l1/.cache/clangd/index/: main.c.42BD983A5062F894.idx
l1/.nvim/: tasks.json
l1/src/: main.c
l2/: MAKE.BAT  main.c
l3/: .gitignore  MAKE.BAT  main.c  mario.mus  music.c  tetris.mus  theme.mus
l3/include/: music.h
l4/: .gitignore  MAKE.BAT  main.c
l5/: main.c
l6/: .gitignore  MAIN.ASM  MAKE.BAT  OLDMAIN.ASM  STOLEN.ASM  STOLEN.docx  main.c
